<resources>
    <string name="app_name">SendeGo!</string>
    <string name="addNewRoute">Añadir nueva ruta</string>
    <string name="seeRoutes">Ver mis rutas</string>
    <string name="exit">Salir</string>
    <string name="about">Acerca de</string>
    <string name="help">Ayuda</string>
    <string name="route_name">Nombre de la ruta</string>
    <string name="localization">Localización o población</string>
    <string name="difficulty">Dificultad</string>
    <string name="routeType">Tipo de ruta</string>
    <string name="distance">Distancia (km)</string>
    <string name="description">Descripción</string>
    <string name="notes">Notas</string>
    <string name="favourite">Marcar favorita</string>
    <string name="save">Guardar</string>
    <string name="about_us_description">SendeGo es una aplicación para registrar y gestionar rutas de senderismo de forma sencilla.</string>
    <string name="authors">Autores: Catalin Dumitru Posedaru🦁 y Juan de Dios Panches Macías🐯</string>
    <string name="about_us_date">Fecha: Enero 2026</string>
    <string name="app_version">Version: 1.0</string>
    <string name="support_button">Contactar soporte</string>
    <string-array name="route_type">
        <item>Circular</item>
        <item>Lineal</item>
    </string-array>
    <string-array name="difficulty">
        <item>Todas</item>
        <item>Difícil</item>
        <item>Media</item>
        <item>Fácil</item>
    </string-array>
    <string-array name="difficultyRegistration">
        <item>Fácil</item>
        <item>Media</item>
        <item>Difícil</item>
    </string-array>
    <string name="difficultyHard">Difícil</string>
    <string name="difficultyMid">Media</string>
    <string name="difficultyEasy">Fácil</string>
    <string name="latitude_example">Latitud (ej: 38°03′17″N)</string>
    <string name="longitude_example">Longitud (ej: -1°12′47″O)</string>
    <string name="name_point">Nombre del punto</string>
    <string name="btnSelectPhotoPOI">Seleccionar foto</string>
    <string name="photo_preview_POI">Vista previa de la foto</string>
    <string name="btnSavePOI">Guardar punto</string>
    <string name="point_of_interest">Puntos de interés</string>
    <string name="add_POI">Añadir punto</string>
    <string name="myFavoriteRoutes">Rutas favoritas</string>
    <string name="homeView">Inicio</string>
    <string name="favoriteRoutesTextView">Tus rutas favoritas</string>
    <string name="emptyFavRoutes">No tienes rutas favoritas aún</string>
    <string name="grades">Grados</string>
    <string name="minutes">Min</string>
    <string name="seconds">Seg</string>
    <string name="takePhoto">Tomar foto</string>
    <string name="openMaps">Abrir en Google Maps</string>
</resources>