<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/mayo_green"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Nombre -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPoiName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/name_point"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPoiName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Latitud -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPoiLatitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/latitude_example"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/tilPoiName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPoiLatitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Longitud -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPoiLongitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/longitude_example"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/tilPoiLatitude"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPoiLongitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Botón seleccionar foto -->
        <Button
            android:id="@+id/btnSelectPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/dark_green"
            android:text="@string/btnSelectPhotoPOI"
            app:layout_constraintTop_toBottomOf="@id/tilPoiLongitude"
            app:layout_constraintStart_toStartOf="parent"/>

        <!-- Vista previa de imagen -->
        <ImageView
            android:id="@+id/imgPoiPreview"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/photo_preview_POI"
            android:scaleType="centerCrop"
            android:src="@android:drawable/ic_menu_gallery"
            app:layout_constraintStart_toEndOf="@id/btnSelectPhoto"
            app:layout_constraintTop_toTopOf="@id/btnSelectPhoto"/>

        <!-- Botón guardar -->
        <Button
            android:id="@+id/btnSavePoi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/btnSavePOI"
            android:backgroundTint="@color/dark_green"
            app:layout_constraintTop_toBottomOf="@id/imgPoiPreview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
